--- a/feature_tracker/CMakeLists.txt
+++ b/feature_tracker/CMakeLists.txt
@@ -2,8 +2,13 @@ cmake_minimum_required(VERSION 2.8.3)
 project(feature_tracker)
 
 set(CMAKE_BUILD_TYPE "Release")
-set(CMAKE_CXX_FLAGS "-std=c++11")
+set(CMAKE_CXX_FLAGS "-std=c++17")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g")
+
+# SET(CMAKE_BUILD_TYPE "Debug")
+# SET(CMAKE_CXX_FLAGS "-std=c++17")
+# SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
+# SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
 
 find_package(catkin REQUIRED COMPONENTS
     roscpp
@@ -14,6 +19,14 @@ find_package(catkin REQUIRED COMPONENTS
     )
 
 find_package(OpenCV REQUIRED)
+
+## find onnx
+set(onnxruntime_INSTALL_PREFIX /usr/local)
+set(onnxruntime_INCLUDE_DIRS
+  ${onnxruntime_INSTALL_PREFIX}/include/onnxruntime
+  ${onnxruntime_INSTALL_PREFIX}/include/onnxruntime/core/session
+)
+find_library(onnxruntime_LIBS NAMES onnxruntime PATHS /usr/local/lib)
 
 catkin_package()
 
@@ -26,12 +39,17 @@ find_package(Eigen3)
 include_directories(
   ${catkin_INCLUDE_DIRS}
   ${EIGEN3_INCLUDE_DIR}
+  ${onnxruntime_INCLUDE_DIRS}
 )
 
 add_executable(feature_tracker
     src/feature_tracker_node.cpp
     src/parameters.cpp
     src/feature_tracker.cpp
+    src/SuperPoint.cpp
+    src/OrtSessionHandler.cpp
+    src/Utility_Ort.h
+    src/Utility_Apps.h
     )
 
-target_link_libraries(feature_tracker ${catkin_LIBRARIES} ${OpenCV_LIBS})
+target_link_libraries(feature_tracker ${catkin_LIBRARIES} ${OpenCV_LIBS} ${onnxruntime_LIBS})
